Adicionado a tag <pre> ao index raiz

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Natubras Pescados</title>
   </head>
   <body>
-    [Server Running]
+    <pre>[Server Running]</pre>
   </body>
 </html>
